# aurum-trading-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/backtest/: service.py  store.py
apps/api/app/bot/: __init__.py  control.py
apps/api/app/configuration/: __init__.py  control.py
apps/api/app/core/: __init__.py  config.py  schemas.py
apps/api/app/db/: models.py  session.py
apps/api/app/execution/: adapters.py  binance_private.py  factory.py  service.py
apps/api/app/market/: __init__.py  binance.py  import_candles.py  importer.py  refresh.py
apps/api/app/mcp/: __init__.py  control.py  rate_limit.py
apps/api/app/performance/: __init__.py  service.py
apps/api/app/portfolio/: reconciliation.py
apps/api/app/strategy/: __init__.py  backtest.py  (+7 more)
apps/api/aurum_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/migrations/: README  env.py
apps/api/tests/: test_backtest_engine.py  test_binance_market.py  test_binance_private.py  test_bot_control.py  test_bot_routes.py  test_config_control.py  test_config_routes.py  test_db_metadata.py  test_execution_adapters.py  test_export_routes.py  test_health.py  test_market_importer.py  test_market_refresh.py  test_mcp_control.py  test_mcp_rate_limit.py  test_mcp_routes.py  test_mcp_server.py  test_order_service.py  test_performance_service.py  test_portfolio_reconciliation.py  test_read_api_routes.py  test_strategy_backtest.py  test_strategy_exits.py  test_strategy_indicators.py  test_strategy_regime.py  test_strategy_risk.py  test_strategy_signals.py  test_strategy_sizing.py  test_worker_cycle.py
(+72 files in other folders)
