[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aurum-api"
version = "0.1.0"
description = "FastAPI backend for the Aurum Trading Platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "anthropic>=0.40",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "redis>=5.2,<6.0",
    "schedule>=1.2,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.scripts]
aurum-import-candles = "app.market.import_candles:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
